--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Mano Anandhan — DevOps Engineer</title>
-  <meta name="description" content="Mano Anandhan — DevOps Engineer. Cloud, CI/CD, Automation, AWS, Azure, Security." />
+  <meta name="description" content="Mano Anandhan — DevOps Engineer. Cloud, CI/CD, Automation, AWS, Kubernetes, Security." />
   <style>
     :root{--bg:#0f1724;--card:#0b1220;--muted:#9aa4b2;--accent:#06b6d4;--glass:rgba(255,255,255,0.03)}
     *{box-sizing:border-box}
@@ -71,15 +71,11 @@
         </div>
 
         <div id="experience" class="card" style="margin-top:18px">
-          <h2>Professional Experience</h2>
+          <h2>DevOps Roles & Contributions</h2>
 
           <div class="experience">
             <div class="exp-head">
-              <div>
-                <div class="company">Kuya Technologies</div>
-                <div class="muted">DevOps Engineer — Aug 2022 – Present</div>
-              </div>
-              <div class="muted">Managed multi-cloud (AWS & Azure)</div>
+              <div class="muted">Cloud, CI/CD, Automation, Security, Infrastructure</div>
             </div>
             <ul class="achievements">
               <li>Managed multi-cloud environments (AWS & Azure), implementing best security practices (IAM, WAF, Security Groups, PCI compliance).</li>
@@ -106,35 +102,18 @@
               <li>Ensured AWS setups complied with ISO 27001, ISO 9001, and PCI DSS standards.</li>
               <li>Identified and mitigated Linux vulnerabilities using CIS Benchmarks.</li>
               <li>Deployed and integrated open-source tools (Typebot, Hoppscotch, Outline, Nextcloud) to enhance collaboration and productivity.</li>
-            </ul>
-          </div>
-
-          <div class="experience">
-            <div class="exp-head">
-              <div>
-                <div class="company">Moonbow Technologies</div>
-                <div class="muted">Jr. DevOps Engineer — May 2020 – July 2022</div>
-              </div>
-              <div class="muted">Linux, Apache/Nginx, AWS</div>
-            </div>
-            <ul class="achievements">
               <li>Managed user and file permissions on Linux systems to ensure secure and controlled access to system resources.</li>
               <li>Installed, updated, and patched software packages using APT to maintain system performance and stability.</li>
               <li>Configured and maintained Apache and Nginx web servers, along with MySQL database servers, for hosting dynamic web applications.</li>
               <li>Implemented secure backup strategies utilizing both local and remote storage solutions to safeguard critical data.</li>
               <li>Executed live server migrations with zero downtime, ensuring uninterrupted service and minimal user impact.</li>
               <li>Administered AWS IAM accounts with Multi-Factor Authentication (MFA) and developed custom IAM policies to enforce least-privilege access.</li>
-              <li>Provisioned and managed AWS services such as EC2, S3, RDS, and IAM to support cloud-based application environments.</li>
               <li>Configured Amazon VPC with subnets, route tables, Internet/NAT gateways to ensure secure and efficient networking.</li>
               <li>Deployed S3 buckets for static content storage and enforced access control using bucket policies and IAM roles.</li>
               <li>Monitored development, staging, and production environments using AWS CloudWatch for performance insights and incident response.</li>
               <li>Secured web traffic by configuring SSL/TLS encryption on web services to ensure data confidentiality and integrity.</li>
-              <li>Provisioned EC2, S3, RDS, IAM; configured VPC, subnets, NAT/Internet gateways and secured environments with IAM and MFA.</li>
-              <li>Executed live server migrations with zero downtime and performed security audits to meet ISO 27001, ISO 9001, PCI-DSS compliance.</li>
-              <li>Implemented monitoring with Grafana, Nagios and Centreon and automated tasks using Bash scripts and AWS CLI.</li>
             </ul>
           </div>
-
         </div>
 
         <div id="projects" class="card" style="margin-top:18px">
@@ -204,3 +183,4 @@
   </main>
 </body>
 </html>
+
